; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/http/extr_message.c_vlc_http_msg_get_retry_after.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/http/extr_message.c_vlc_http_msg_get_retry_after.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_http_msg = type { i32 }

@.str = private unnamed_addr constant [12 x i8] c"Retry-After\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vlc_http_msg_get_retry_after(%struct.vlc_http_msg* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.vlc_http_msg*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.vlc_http_msg* %0, %struct.vlc_http_msg** %3, align 8
  %9 = load %struct.vlc_http_msg*, %struct.vlc_http_msg** %3, align 8
  %10 = call i8* @vlc_http_msg_get_header(%struct.vlc_http_msg* %9, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  store i8* %10, i8** %4, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = icmp eq i8* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %45

14:                                               ; preds = %1
  %15 = load i8*, i8** %4, align 8
  %16 = call i64 @strtoul(i8* %15, i8** %5, i32 10)
  store i64 %16, i64* %6, align 8
  %17 = load i8*, i8** %5, align 8
  %18 = load i8*, i8** %4, align 8
  %19 = icmp ne i8* %17, %18
  br i1 %19, label %20, label %28

20:                                               ; preds = %14
  %21 = load i8*, i8** %5, align 8
  %22 = load i8, i8* %21, align 1
  %23 = sext i8 %22 to i32
  %24 = icmp eq i32 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %20
  %26 = load i64, i64* %6, align 8
  %27 = trunc i64 %26 to i32
  store i32 %27, i32* %2, align 4
  br label %45

28:                                               ; preds = %20, %14
  %29 = load i8*, i8** %4, align 8
  %30 = call i64 @vlc_http_mktime(i8* %29)
  store i64 %30, i64* %7, align 8
  %31 = load i64, i64* %7, align 8
  %32 = icmp ne i64 %31, -1
  br i1 %32, label %33, label %44

33:                                               ; preds = %28
  %34 = call i32 @time(i64* %8)
  %35 = load i64, i64* %7, align 8
  %36 = load i64, i64* %8, align 8
  %37 = icmp sge i64 %35, %36
  br i1 %37, label %38, label %43

38:                                               ; preds = %33
  %39 = load i64, i64* %7, align 8
  %40 = load i64, i64* %8, align 8
  %41 = sub nsw i64 %39, %40
  %42 = trunc i64 %41 to i32
  store i32 %42, i32* %2, align 4
  br label %45

43:                                               ; preds = %33
  br label %44

44:                                               ; preds = %43, %28
  store i32 0, i32* %2, align 4
  br label %45

45:                                               ; preds = %44, %38, %25, %13
  %46 = load i32, i32* %2, align 4
  ret i32 %46
}

declare dso_local i8* @vlc_http_msg_get_header(%struct.vlc_http_msg*, i8*) #1

declare dso_local i64 @strtoul(i8*, i8**, i32) #1

declare dso_local i64 @vlc_http_mktime(i8*) #1

declare dso_local i32 @time(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
